--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <div class="nav__menu">
                             <p class="nav__text">Switch Theme</p>
                             <button class="change-theme">
-                                <div class="nav__button-enter"></div>
+                                <div class="nav__btn-enter"></div>
                             </button>
                         </div>
                         <div class="nav__circle"></div>
@@ -54,7 +54,7 @@
                 <div class="container">
                     <div class="video__wrapper">
                         <button class="video-play" data-fancybox data-src="#video-popup">
-                            <img src="img/Group 8.svg" alt="play">
+                            <img src="img/Group-8.svg" alt="play">
                         </button>
                     </div>
                 </div>
@@ -282,9 +282,8 @@
         </footer>
 
         <div id="video-popup">
-            <video class="popup-video" src="video/The new AirPods Pro   Quiet the noise   Apple.mp4" controls></video>
+            <video class="popup-video" src="video/The-new-AirPods-Pro-Quiet-the-noise-Apple.mp4" controls></video>
         </div>
-    </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
