--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <div class="descriptions__text">
                             <h1 class="descriptions__title">HI THERE, I’M A DIGITAL PRODUCT DESIGNER</h1>
                             <p>
-                                Caleb Asuquo N. is a Brand Identity, UI/UX & Web Designer passionate about building brands that inspire & solving problems creatively with a slight addiction to coffee and music. 
+                                Alex Jordan is a Brand Identity, UI/UX & Web Designer passionate about building brands that inspire & solving problems creatively with a slight addiction to coffee and music. 
                             </p>
                             <div class="descriptions__box-link">
                                 <a href="#" class="descriptions__link-hi">Say Hi</a>
